Added label tag to attribute names to allow style changing in Index. Made onRealmSelect() more concise and broke out realm color change responsibility to new function changeRealmColors(), created functions to reset attributes and attribute priorities, created functions to get the selected realm, race and class, and created functions to reset/set attribute and attribute priority, and update attributes depending on selected class.

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 				ArmorFact <input type="number" name="armorFactor" id="armorFactor" min="1" max="9999" class="inputborder inputspaceone" readonly><br />
 				<div style="background: black;">
 					<hr />
-					<input type="number" name="strAttribute" id="strAttribute" value="0" min="1" max="9999" class="inputborder inputspacetwo" readonly>Strength 
-					<input type="number" name="intAttribute" id="intAttribute" value="0" min="1" max="9999" class="inputborder inputspacetwo" style="margin-left: 39px;" readonly>Intelligence<br />
-					<input type="number" name="conAttribute" id="conAttribute" value="0" min="1" max="9999" class="inputborder inputspacetwo" readonly>Constitution 
-					<input type="number" name="empAttribute" id="empAttribute" value="0" min="1" max="9999" class="inputborder inputspacetwo" style="margin-left: 21px;" readonly>Empathy<br />
-					<input type="number" name="dexAttribute" id="dexAttribute" value="0" min="1" max="9999" class="inputborder inputspacetwo" readonly>Dexterity 
-					<input type="number" name="pieAttribute" id="pieAttribute" value="0" min="1" max="9999" class="inputborder inputspacetwo" style="margin-left: 37px;" readonly>Piety<br />
-					<input type="number" name="quiAttribute" id="quiAttribute" value="0" min="1" max="9999" class="inputborder inputspacetwo" readonly>Quickness 
-					<input type="number" name="chaAttribute" id="chaAttribute" value="0" min="1" max="9999" class="inputborder inputspacetwo" style="margin-left: 29px;" readonly>Charisma<br />
+					<input type="number" name="strAttribute" id="strAttribute" value="0" min="1" max="9999" class="inputborder inputspaceone" readonly><label id="strPrio">Strength</label> 
+					<input type="number" name="intAttribute" id="intAttribute" value="0" min="1" max="9999" class="inputborder inputspaceone" style="margin-left: 39px;" readonly><label id="intPrio">Intelligence</label><br />
+					<input type="number" name="conAttribute" id="conAttribute" value="0" min="1" max="9999" class="inputborder inputspaceone" readonly><label id="conPrio">Constitution</label> 
+					<input type="number" name="empAttribute" id="empAttribute" value="0" min="1" max="9999" class="inputborder inputspaceone" style="margin-left: 21px;" readonly><label id="empPrio">Empathy</label><br />
+					<input type="number" name="dexAttribute" id="dexAttribute" value="0" min="1" max="9999" class="inputborder inputspaceone" readonly><label id="dexPrio">Dexterity</label> 
+					<input type="number" name="pieAttribute" id="pieAttribute" value="0" min="1" max="9999" class="inputborder inputspaceone" style="margin-left: 37px;" readonly><label id="piePrio">Piety</label><br />
+					<input type="number" name="quiAttribute" id="quiAttribute" value="0" min="1" max="9999" class="inputborder inputspaceone" readonly><label id="quiPrio">Quickness</label> 
+					<input type="number" name="chaAttribute" id="chaAttribute" value="0" min="1" max="9999" class="inputborder inputspaceone" style="margin-left: 29px;" readonly><label id="chaPrio">Charisma</label><br />
 					<hr />
 				</div>
 				<label class="objectborder" style="padding-right:20%; margin-left: 2px;">Resists </label>
