Added maxlength to Level and Realm Points input in Index, mostly to allow half level increments for Level to be implemented later. Setting readOnly state for charLevel input to only be modifiable after a Class is selected, updated  Minotaur races to use correct names per realm and consolidated Mauler classes into one, updateAttributes now also adjusts pointMod, created resetLevel() function and added into onClassSelect() for planner javascript. Changed approach of changeSpecPoints so for loops count up instead of backwards and now accounts for half levels.

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 		<tr>
 			<td class="table-align"><!-- Attributes page-->
 				<!-- Insert character name here--><br />
-				Level <input type="number" name="charLevel" id="charLevel" value="1" min="1" max="50" step="1" class="inputborder" style="width: 28px; margin-right: 15px; margin-left: 2px;" oninput="changeSpecPoints()"> 
-				Realm Points <input type="number" name="realmPoints" id="realmPoints" value="0" min="0" max="999999999" step="1" class="inputborder" style="width: 80px; margin-top: 2px; margin-bottom:2px;"><br />
+				Level <input type="number" name="charLevel" id="charLevel" value="1" min="1" max="50" maxlength="4" step="1" class="inputborder" style="width: 39px; margin-right: 2px; margin-left: 2px;" oninput="changeSpecPoints()" readonly> 
+				Realm Points <input type="number" name="realmPoints" id="realmPoints" value="0" min="0" max="999999999" maxlength="9" step="1" class="inputborder" style="width: 80px; margin-top: 2px; margin-bottom:2px;"><br />
 				WeapSkill <input type="number" name="weaponSkill" id="weaponSkill" min="1" max="9999" class="inputborder inputspaceone" style="margin-right: 41px; margin-left: 6px;" readonly> 
 				Hit Points <input type="number" name="hitPoints" id="hitPoints" min="1" max="99999" class="inputborder inputspaceone" readonly><br />
 				WeapDam <input type="number" name="weaponDamage" id="weaponDamage" min="1" max="9999" class="inputborder inputspaceone" style="margin-right: 38px;" readonly> 
