index.html: changed input type for resistances to text allowing non number values. planner.js: adjusted Albion styles and indexes, added some comments and rearranged functions, race selection now adds resistances and created function to reset them, removed some unused variables and redundant function calls, made changes to specpoint function attempting to account for half levels, still not 100% working. styles.js: adjusted IDs for styles.

--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
 					<hr />
 				</div>
 				<label class="objectborder" style="padding-right:20%; margin-left: 2px;">Resists </label>
-				<input type="number" name="coldRes" id="coldRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" style="margin-left: 22px;" readonly>Cold<br />
-				<input type="number" name="thrustRes" id="thrustRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" readonly>Thrust 
-				<input type="number" name="matterRes" id="matterRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" style="margin-left: 35px;" readonly>Matter<br />
-				<input type="number" name="crushRes" id="crushRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" readonly>Crush 
-				<input type="number" name="energyRes" id="energyRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" style="margin-left: 37px;" readonly>Energy<br />
-				<input type="number" name="slashRes" id="slashRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" readonly>Slash 
-				<input type="number" name="spiritRes" id="spiritRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" style="margin-left: 39px;" readonly>Spirit<br />
-				<input type="number" name="bodyRes" id="heatRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" readonly>Heat 
-				<input type="number" name="bodyRes" id="bodyRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" style="margin-left: 43px;" readonly>Body<br />
+				<input type="text" name="coldRes" id="coldRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" style="margin-left: 22px;" readonly>Cold<br />
+				<input type="text" name="thrustRes" id="thrustRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" readonly>Thrust 
+				<input type="text" name="matterRes" id="matterRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" style="margin-left: 35px;" readonly>Matter<br />
+				<input type="text" name="crushRes" id="crushRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" readonly>Crush 
+				<input type="text" name="energyRes" id="energyRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" style="margin-left: 37px;" readonly>Energy<br />
+				<input type="text" name="slashRes" id="slashRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" readonly>Slash 
+				<input type="text" name="spiritRes" id="spiritRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" style="margin-left: 39px;" readonly>Spirit<br />
+				<input type="text" name="bodyRes" id="heatRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" readonly>Heat 
+				<input type="text" name="bodyRes" id="bodyRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" style="margin-left: 43px;" readonly>Body<br />
 				<div id="charDetails" class="attbox" >
 				Prof: <!-- Overall class type --><br />
 				Order: <!-- Crafting order --><br />
