Imported abilities.js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <link rel="stylesheet" href="CSS/planner.css">
 <script id="styles-data" src="./js/styles.js"></script>
+<script id="ability-data" src="./js/abilities.js"></script>
 <script src="./js/planner.js"></script>
 
 
