Added IDs to <div> tags to target for specializations, abilities and tradeskills

--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@
 		<td class="table-align"><!-- Specializations page -->
 			<label class="objectborder pagetitle" style="padding-right: 40px;">Specializations</label>  
 			<label class="objectborder">Points:<input type="number" name="specPoints" id="specPoints" value="0" min="0" max="9999" placeholder="0" class="selectinputborder" style="text-align: right;" readonly></label><br />
-			<div class="specbox">
+			<div id="specBox" class="specbox">
 				<!-- Selected Class trainable specializations, can scroll --><br />
 			</div>
 			<label class="objectborder pagetitle" style="padding-right: 78%;">Abilities</label><br />
-			<div class="specbox" style="height: 139px;">
+			<div id="abilityBox" class="specbox" style="height: 139px;">
 				<!-- Class and realm rank abilities, can scroll --><br />
 			</div>
 			<label class="objectborder pagetitle" style="padding-right: 72%;">Tradeskills</label><br />
-			<div class="specbox">
+			<div id="tradeskillBox" class="specbox">
 				<!-- Scroll window -->
 			</div>
 		</td>
