Imported font-face CSS

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 
-<link rel="stylesheet" href="CSS/planner.css">
+<link rel="stylesheet" href="CSS/stylesheet.css" type="text/css" charset="utf-8" />
+<link rel="stylesheet" href="CSS/planner.css" />
 <script id="styles-data" src="./js/styles.js"></script>
 <script id="ability-data" src="./js/abilities.js"></script>
 <script src="./js/planner.js"></script>
