Added a realm title for testing

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 	</div>
 </div>
 
+<span class="daocLogo">0</span>
+<label id="realmTitle"><span class="initial">A</span>lbion</label>
 <h1>Dark Age of Camelot Character Planner</h1>
 <div class="selections">
 	<label id="realmSelector">
