--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <link rel="stylesheet" href="CSS/planner.css" />
 <script id="styles-data" src="./js/styles.js"></script>
 <script id="ability-data" src="./js/abilities.js"></script>
-<script src="./js/planner.js"></script>
+<script id="class-data" src="./js/classes.js"></script>
+<script id="race-data" src="./js/races.js"></script>
+<script id="functions" src="./js/planner.js"></script>
 
 
 <title>Dark Age of Camelot Character Planner</title>
@@ -42,15 +44,15 @@
 	</div>
 </div>
 
-<span class="daocLogo">0</span>
-<label id="realmTitle"><span class="initial">A</span>lbion</label>
-<h1>Dark Age of Camelot Character Planner</h1>
+<div class="daocTop"><img src="./images/daocLogoPlaceholder.png" class="daocLogo"></div>
+<!--Dark Age of Camelot Character Planner-->
 <div class="selections">
+	
 	<label id="realmSelector">
 		Realm: 
 		<label id="selectalb"><input type="radio" name="realm" id="albRealm" onchange="onRealmSelect()">Albion </label> 
 		<label id="selecthib"><input type="radio" name="realm" id="hibRealm" onchange="onRealmSelect()">Hibernia </label>
-		<label id="selectmid"><input type="radio" name="realm" id="midRealm" onchange="onRealmSelect()">Midguard </label><br /><br />
+		<label id="selectmid"><input type="radio" name="realm" id="midRealm" onchange="onRealmSelect()">Midgard </label><br /><br />
 	</label>
 	<label id="raceSelector">
 		<!--Created with JavaScript functions drawDropDown() and fillDropDown()-->
@@ -60,6 +62,13 @@
 		<!--Created with Javascript functions drawDropDown() and fillDropDown()-->
 	</label><br /><br />
 </div>
+
+<div id="selectionDetails">
+	<span id="realmLogo"><img src="./images/realmLogoPlaceholder.png"></span>
+	<span id="raceDesc"></span>
+	<span id="classDesc"></span>
+</div>
+
 <div class="show_hide" id="builder"><table>
 	<tr>
 		<th>Attributes</th>
@@ -154,7 +163,7 @@
 			</div>
 			<label class="buttonborder"><button type="button" name="train" id="train" class="button">Train</button></label>
 		</td>
-		<!-- <td class="table-align"><!-- "Group page" Options for class and race here -->
+		<!-- <td class="table-align"> "Group page" Options for class and race here -->
 		<!-- </td> -->
 	</tr>
 </table></div>
