Hunk 1: Corrected typo for label closing tag.  Hunk 2: Added wrapper around first and second section of trainers split by hr tag. Also moved hr tag's style to planner.css.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<label class="pointTitle">Realm Points</label><br />
 						<label id="realmPointsAvailable" class="pointDisp">Available</label><label id="totalRealmAvailable" class="pointDispNum">0</label><br />
 						<label id="realmPointsNeeded" class="pointDisp">Needed</label><label id="totalRealmNeeded" class="pointDispNum">0</label><br />
-						<label id="realmPointsRemaining" class="pointDisp">Remaining</lable><label id="totalRealmRemaining" class="pointDispNum">0</label><br />
+						<label id="realmPointsRemaining" class="pointDisp">Remaining</label><label id="totalRealmRemaining" class="pointDispNum">0</label><br />
 					</span>
 					<span id="minLevelWrapper" style="display: inline-block; position: absolute; margin-top: 35px; margin-left: 150px; font-weight: bolder;"><label id="minLevelLabel">Minimum Level</label><label id="minLevelDisp" style="color: lightgray; margin-left: 25px; font-weight: bolder;">1</label></span>
 				</td>
@@ -76,10 +76,13 @@
 			</tr>
 			<tr>
 				<td style="height:400px;">
+					<div id="specSectionWrapper">
 					<span id="specializationAdjusters"></span>
-					<hr style="display: inline-block; margin-top:180px; margin-left:10px; width:370px;" /><br />
+					</div>
+					<div id="skillSectionWrapper">
+					<hr /><br />
 					<label id="newAbilityTitle" style="margin-left: 13px; font-weight: bolder;">New Styles and Skills</label>
-					<span id="newAbilityDisp"></span>
+					<span id="newAbilityDisp"></span></div>
 				</td>
 			</tr>
 			<tr>
