Added combat and magic IDs to div tags for targetting

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 		</td>
 		<td class="table-align"><!-- Combat styles page -->
 			<label class="objectborder pagetitle" style="padding-right: 78%;">Combat</label><br />
-			<div class="abbox">
+			<div id="combat" class="abbox">
 				<!-- Insert Styles here -->
 			</div>
 			<label class="buttonborder"><button type="button" name="train" id="train" class="button" onclick="openTrainer()">TRAIN</button></label>
@@ -209,7 +209,7 @@
 		</td>
 		<td class="table-align"><!-- Magic Spells page -->
 			<label class="objectborder pagetitle" style="padding-right: 82%;">Magic</label><br />
-			<div class="abbox">
+			<div id="magic" class="abbox">
 			<!-- Selected Class spells, both naturally learned and trained -->
 			</div>
 			<label class="buttonborder"><button type="button" name="train" id="train" class="button" onclick="openTrainer()">TRAIN</button></label>
